--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^2.2.4",
     "materialize-css": "^0.100.2",
+    "ng2-uploader": "^2.0.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
